// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/EditableURL render() should render component with state error and value 1`] = `
<TextInput
  className="url-input"
  error={
    <FormattedMessage
      defaultMessage="Required Field"
      id="boxui.validation.requiredError"
    />
  }
  hideLabel={true}
  inputRef={[Function]}
  isRequired={true}
  label="boxui.itemDetails.url"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="boxui.itemDetails.urlPlaceholder"
  type="url"
  value="box"
/>
`;

exports[`features/item-details/EditableURL render() should render component with state error and value 2`] = `
<TextInput
  className="url-input"
  error={
    <FormattedMessage
      defaultMessage="Invalid URL"
      id="boxui.validation.URLError"
    />
  }
  hideLabel={true}
  inputRef={[Function]}
  isRequired={true}
  label="boxui.itemDetails.url"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="boxui.itemDetails.urlPlaceholder"
  type="url"
  value="box"
/>
`;

exports[`features/item-details/EditableURL render() should render default component 1`] = `
<TextInput
  className="url-input"
  hideLabel={true}
  inputRef={[Function]}
  isRequired={true}
  label="boxui.itemDetails.url"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="boxui.itemDetails.urlPlaceholder"
  type="url"
  value="box.com"
/>
`;
